# vdocs

./: CHANGELOG.md  CLAUDE.md  LICENSE.MIT.template  Makefile  README.md  TODO.md  pyproject.toml
docs/: code-review-stage4.md  de-novo-run.md  doc-classification-filtering-summary.md  doc-sidecar-design.md  fidelity-framework.md  fileman-docs-pilot-implementation-plan.md  fileman-integrated-master-poc-proposal.md  function-domain-taxonomy.md  gate-reference.md  gold-titlepage-revhist-toc-findings.md  gold-validation-report.md  incremental-discovery-evidence-based-design.md  l1.5-curation-worksheet.md  maintainability-operability-review.md  normalize-toc-overstrip-proposal.md  offline-lexical-search-implementation-plan.md  offline-lexical-search-plan.md  persona-based-search-strategy.md  pipeline-operability-hardening-findings.md  product-abbreviations.draft.yaml  product-names.draft.yaml  read-contract-implementation-plan.md  rich-publication-and-pdf-export-proposal.md  rich-reading-tables-proposal.md  semantic-knowledge-layer-implementation-plan.md  semantic-knowledge-layer-proposal.md  signal-to-noise-design-goals.md  skl-implementation-plan.md  skl-proposal.md  title-normalization-proposal.md  vdl-content-quality-and-ia-strategy.md  vdl-crawl-spec.md  vdl-crawl-tracker.md  vdocs-design.md  vdocs-discovery-processing-bugfix-report.md  vdocs-implementation-plan.md  vdocs-implementation-tracker.md  vdocs-remediation-plan.md  vdocs-tui-architecture-sketch.md  vdocs-user-guide.md
human validation/: 1-title-tokens.csv  2-title-boilerplate-fragments.csv  HOW-TO-USE.md
registries/: abbrev-fallback.yaml  converter-routing.yaml  dev-corpus.txt  doc-labels.yaml  doc-types.yaml  doctor-policy.yaml  golden-queries.yaml  manual-labels.yaml  package-master.yaml  (+2 more)
(+312 files in other folders)
