[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vdocs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-watch",
    "pytest-randomly",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -x"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "hypothesis>=6.155.1",
    "types-pyyaml>=6.0.12.20260518",
]
